k8s/sitehmdcc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitehmdcc-deployment
spec:
  replicas: 2 # Update the replicas from 2 to 4
  selector:
    matchLabels:
      app: sitehmdcc
  template:
    metadata:
      labels:
        app: sitehmdcc
    spec:
      imagePullSecrets:
        - name: dockerhub-secret # O nome do Secret que você criou
      # securityContext:
      #   fsGroup: 33 # Mantém a permissão de grupo no volume FSS
      # volumes:
      #   - name: sitehmdcc-volume
      #     persistentVolumeClaim:
      #       claimName: sitehmdcc-pvc # Nome do PersistentVolumeClaim
      containers:
      - name: sitehmdcc
        image: gerenciatihmdcc/hmdcc:sitehmdcc-v1.${TAG}
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        # volumeMounts:
        #   - mountPath: /media/sitehmdcc
        #     name: sitehmdcc-volume
        resources:
          requests:
            memory: "250Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: service-sitehmdcc
spec:
  selector:
    app: sitehmdcc
  ports:
    - port: 80
      name: web
      protocol: TCP
      targetPort: 3000 # Refere-se a porta containerPort
  type: ClusterIP
