k8s/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1 # Update the replicas from 2 to 4
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      # volumes:
      #   - name: wordpress-storage
      #     persistentVolumeClaim:
      #       claimName: wordpress-object-pvc # Nome do PVC criado no Passo 2
      imagePullSecrets:
        - name: dockerhub-secret # O nome do Secret que você criou
      containers:
      - name: wordpress
        image: gerenciatihmdcc/hmdcc:wordpress-v1.${TAG_WORDPRESS}
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      name: web
      protocol: TCP
      targetPort: 80 # Refere-se a porta containerPort
  type: ClusterIP
