k8s/wordpress-ingressroute-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute 
metadata:
  name: wordpress-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hmdcc.com.br`) && PathPrefix(`/wp-admin`)
      kind: Rule      
      services:
        - name: wordpress-service
          port: 80
  tls:
    secretName: wordpress-certificate-secret # deve ser o mesmo do Certificate
